# S

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: settings.yaml
src/: __init__.py  config.py  recommender.py
src/data_sources/: __init__.py  analyst.py  betting.py  finviz.py  news.py  options.py  screener.py
