[project]
name = "stock-crypto-recommender"
version = "0.1.0"
description = "AI-powered stock and crypto recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "cachetools>=5.3.0",
    "click>=8.1.0",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typing-extensions>=4.9.0",
    "yfinance>=0.2.36",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[project.scripts]
recommend = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
